// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SummaryGroupTable > Rendering > should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="ons-summary"
  >
    <div
      class="ons-summary__group"
    >
      <h2
        class="ons-summary__group-title"
      >
        test
      </h2>
      <dl
        class="ons-summary__items"
      >
        <div
          class="ons-summary__item"
        >
          <dt
            class="ons-summary__item-title"
          >
            <div
              class="ons-summary__item--text"
            >
              Foo
            </div>
          </dt>
          <dd
            class="ons-summary__values"
          >
            <span
              class="ons-summary__text"
            >
              bar
            </span>
          </dd>
        </div>
      </dl>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SummaryItemRow > Rendering > should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="ons-summary__item"
  >
    <dt
      class="ons-summary__item-title"
    >
      <div
        class="ons-summary__item--text"
      >
        Foo
      </div>
    </dt>
    <dd
      class="ons-summary__values"
    >
      <span
        class="ons-summary__text"
      >
        bar
      </span>
    </dd>
  </div>
  <table />
</DocumentFragment>
`;
